--- a/task 3/a3.html
+++ b/task 3/a3.html
@@ -2,6 +2,7 @@
 <head>
        <title>COMPANION</title>
        <link rel="stylesheet" href="a3.css">
+       <script src="a3.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
